mobile/mobile.scss
.post-menu-row {
  padding-top: 0.5rem;
}

.menu-links-row {
  .glyphs {
    .user-notifications-link,
    .user-pms-link {
      display: block;
    }
  }
}

.d-header-icons {
  #notifications,
  #inbox {
    display: none;
  }
}

.dc-hero {
  .btn {
    width: 100%;
  }

  .btn + .btn {
    margin-top: 1rem;
  }
}

#navigation-bar {
  border: none;

  .navigation-toggle {
    border-radius: $border-radius;
    margin: 0;
  }

  .navigation-toggle .toggle-link {
    border: none;
    top: 0;
    padding: 0.1875rem 0.625rem;
  }
}

.list-controls {
  .container #create-topic {
    margin: 0;
  }

  .nav-pills .drop {
    padding: 0;
  }

  .nav-pills .drop li {
    margin: 0;
    padding: 0;

    a[href="/categories"] {
      display: none;
    }

    a {
      padding: 0.625rem;
    }
  }

  .btn:not(.select-kit-header),
  .btn,
  .select-kit:not(.category-drop) {
    margin: 0;
    margin-right: 0.625rem;
  }
}

ol.category-breadcrumb .select-kit.combo-box .select-kit-header {
  font-size: 1.5rem;
}

.navigation-container,
.dc-navigation-container,
.category-navigation {
  .category-actions {
    align-items: center;
    display: flex;
    margin-top: 1rem;
    position: relative;
    top: 0;
    width: 100%;
  }
}

// Login and Signup modals
.d-modal.create-account,
.d-modal.login-modal {
  .modal-inner-container {
    max-width: 100vw;
    overflow: visible;
  }

  .login-form form,
  #login-form,
  .have-an-account,
  .auth-footer,
  .auth-social {
    padding: 0;
  }

  #login-buttons:not(.hidden) {
    flex-direction: column;

    button {
      flex: 1;
      max-width: 100%;
      margin: 0;
      min-height: 40px;
      margin-bottom: 0.5rem;
    }
  }
}

.d-header.d-header .built-in-logo {
  // we instead have the dc-widget-logo for menu
  display: none;
}

// Collectives Alert
.alert.alert-collective-alert {
  font-size: 14px;
}

